assets/css/style.css
/* ... */
ul #techs li {
  display:inline;
}
/* Dark mode button */
/* Dark mode button */
#darkModeToggle {
  position: absolute;
  top: 20px;
  right: 20px;
  background-color: var(--primary-color); /* Dark mode button background color */
  color: var(--white); /* Dark mode button text color */
  border: none;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  font-size: 24px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
  transition: background-color 0.3s ease; /* Smooth transition for background color */
  z-index: 1000; /* Ensure it's above the background */
}

/* Dark mode button hover effect */
#darkModeToggle:hover span {
  transform:  scale(1.02) rotate(45deg) ; /* Scale up slightly on hover */
}
#darkModeToggle span {
  transform: rotate(0); /* Rotate text back to 0 degrees */
  transition: transform 0.3s ease-in-out; /* Smooth transition for transform property */
}
/* Dark mode icon */
#darkModeToggle {
  width: 2%;
  height: 4%;
  fill: currentColor;
}

